@@ -2,3 +2,4 @@
 dist/
 pysagas.egg-info/
 __pycache__
+.pytest_cache
