@@ -1,6 +1,9 @@
 CHANGES
 =======
 
+* add unit tests
+* ch(docs):add documentation- add readme docs- add usage examples
+
 0.0.2
 -----
 
